16 Gateway API (nginx gatway fabric)/Gateway TLS termination mode/3termination-mode-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: default
spec:
  gatewayClassName: nginx # Must have gatewayClassName Defined ! From verifing the gatewayclass step!
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: example-tls
